[gd_scene load_steps=4 format=3 uid="uid://c3qwsbgpvcqv"]

[ext_resource type="Script" path="res://Characters/Resources/PlayerMovement.gd" id="1_wydpy"]
[ext_resource type="Script" path="res://Characters/Resources/HUD.gd" id="2_ty4rr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i1jcn"]

[node name="PlayerMovement" type="Node3D" groups=["Controller"]]
top_level = true
script = ExtResource("1_wydpy")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -5)
collision_mask = 2

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.910875, 2.105, 0)
shape = SubResource("CapsuleShape3D_i1jcn")
spring_length = 2.808
margin = 0.976

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.74504)
current = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1919.0
offset_bottom = 1078.0
mouse_filter = 2
script = ExtResource("2_ty4rr")

[node name="AmmoCounter" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 16.0
offset_top = 964.0
offset_right = 264.0
offset_bottom = 990.0
text = "Fuck me hard, plz"
horizontal_alignment = 1

[node name="AmmoBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 14.0
offset_top = 1010.0
offset_right = 263.0
offset_bottom = 1059.0
mouse_filter = 2
step = 1.0

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 14.0
offset_top = 893.0
offset_right = 376.0
offset_bottom = 935.0

[node name="ColorRect" type="ColorRect" parent="HUD"]
layout_mode = 0
offset_left = 731.0
offset_top = 23.0
offset_right = 1203.0
offset_bottom = 63.0
color = Color(0.239216, 0.239216, 0.239216, 0.415686)

[node name="EnemyStats" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 740.0
offset_top = 24.0
offset_right = 1198.0
offset_bottom = 64.0
text = "Fuck off"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="HUD/EnemyStats"]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="HUD/EnemyStats/Timer" to="HUD" method="hide_enemy_stats"]
